--- a/src/components/news/index.scss
+++ b/src/components/news/index.scss
@@ -96,6 +96,12 @@
     cursor: pointer;
     margin-bottom: 20px;
     margin-left: 45%;
+    
+    &:hover {
+      background-color: #333;
+      transform: translateY(-2px);
+      transition: all 0.3s ease;
+    }
   }
 }
 
