--- a/src/page/cosingmentForm/index.scss
+++ b/src/page/cosingmentForm/index.scss
@@ -74,11 +74,20 @@
       width: 100%;
       &__left {
         width: 45%;
+        background-color: rgba(255, 255, 255, 0.6);
+        padding: 22px 60px 22px;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        height: 500px;
+        backdrop-filter: blur(10px);
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       }
       &__right {
         width: 45%;
+        height: 500px;
+
       }
-      &__left__first,
+     
       &__right__first {
         background-color: rgba(255, 255, 255, 0.6);
         padding: 22px 60px 22px;
@@ -88,13 +97,12 @@
         backdrop-filter: blur(10px);
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       }
-      &__left__second,
       &__right__second {
         margin-bottom: 0;
         background-color: rgba(255, 255, 255, 0.6);
         padding: 22px 60px 22px;
         border-radius: 10px;
-        height: 350px;
+        height: 260px;
         backdrop-filter: blur(10px);
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       }
